@@ -106,8 +106,8 @@ void remove_task (Task *tsk)
    Taskbar *tskbar;
 	for (i=0 ; i < nb_panel ; i++) {
 		for (j=0 ; j < panel1[i].nb_desktop ; j++) {
-			//if (tsk->desktop != ALLDESKTOP && tsk->desktop != j) continue;
-			if (!panel1[i].taskbar) continue;
+			if (tsk->desktop != ALLDESKTOP && tsk->desktop != j) continue;
+			//if (!panel1[i].taskbar) continue;
 
 			GSList *l0;
 			tskbar = &panel1[i].taskbar[j];
