@@ -6,28 +6,28 @@
 # BACKGROUND AND BORDER
 #---------------------------------------------
 rounded = 7
-border_width = 2
+border_width = 1
 background_color = #000000 60
 border_color = #ffffff 18
 
 rounded = 5
 border_width = 0
-background_color = #ffffff 30
-border_color = #ffffff 18
+background_color = #ffffff 40
+border_color = #ffffff 50
 
 rounded = 5
 border_width = 0
-background_color = #ffffff 50
+background_color = #ffffff 18
 border_color = #ffffff 70
 
 #---------------------------------------------
 # PANEL
 #---------------------------------------------
 panel_monitor = all
-panel_position = top center
-panel_size = 90% 30
+panel_position = bottom center
+panel_size = 90% 28
 panel_margin = 0 0
-panel_padding = 9 0
+panel_padding = 7 0
 font_shadow = 0
 panel_background_id = 1
 
@@ -35,7 +35,7 @@ panel_background_id = 1
 # TASKBAR
 #---------------------------------------------
 taskbar_mode = single_monitor
-taskbar_padding = 2 4
+taskbar_padding = 2 3 2
 taskbar_background_id = 0
 
 #---------------------------------------------
@@ -43,14 +43,14 @@ taskbar_background_id = 0
 #---------------------------------------------
 task_icon = 1
 task_text = 1
-task_width = 130
+task_width = 140
 task_centered = 1
-task_padding = 4 2
-task_font = sans 8
-task_font_color = #ffffff 65
+task_padding = 6 3
+task_font = sans 7
+task_font_color = #ffffff 70
 task_active_font_color = #ffffff 85
-task_background_id = 2
-task_active_background_id = 3
+task_background_id = 3
+task_active_background_id = 2
 
 
 #---------------------------------------------
@@ -59,9 +59,9 @@ task_active_background_id = 3
 time1_format = %H:%M
 time1_font = sans 8
 time2_format = %A %d %B
-time2_font = sans 7
+time2_font = sans 6
 clock_font_color = #ffffff 76
-clock_padding = 0 0
+clock_padding = 4 0
 clock_background_id = 0
 
 #---------------------------------------------
